--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ timezone: Japan
 gems:
   - jekyll-sitemap
 theme: jekyll-theme-slate
-title: Koyomiya5438 Homepage
+title: Koyomiya Homepage
 lang: ja
